[gd_scene load_steps=15 format=2]

[ext_resource path="res://demos/minecraft/minecraft_demo.gd" type="Script" id=1]
[ext_resource path="res://demos/minecraft/custom_slot/MinecraftSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://kenney_assets/kenney_rpg/kenney_helmet.png" type="Texture" id=3]
[ext_resource path="res://kenney_assets/kenney_rpg/kenney_gloves.png" type="Texture" id=4]
[ext_resource path="res://kenney_assets/kenney_rpg/kenney_armor.png" type="Texture" id=5]
[ext_resource path="res://kenney_assets/kenney_rpg/kenney_boots.png" type="Texture" id=6]
[ext_resource path="res://kenney_assets/kenney_fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://kenney_assets/kenney_rpg/right_arrow.png" type="Texture" id=8]
[ext_resource path="res://kenney_assets/kenney_rpg/kenney_shield.png" type="Texture" id=9]
[ext_resource path="res://kenney_assets/kenney_rpg/kenney_parchment.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.764706, 0.827451, 0.823529, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="MinecraftDemo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Inventory" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -158.0
margin_right = 168.0
margin_bottom = 158.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory"]
margin_left = 8.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopArea" type="HBoxContainer" parent="Inventory/VBoxContainer"]
margin_right = 320.0
margin_bottom = 140.0
size_flags_vertical = 3

[node name="ArmorSlots" type="VBoxContainer" parent="Inventory/VBoxContainer/TopArea"]
margin_right = 32.0
margin_bottom = 140.0

[node name="HeadSlot" parent="Inventory/VBoxContainer/TopArea/ArmorSlots" instance=ExtResource( 2 )]
confine_categories = PoolStringArray( "equip_head" )
slot_group = "equip"
next_groups = PoolStringArray( "main" )

[node name="TextureRect" type="TextureRect" parent="Inventory/VBoxContainer/TopArea/ArmorSlots/HeadSlot"]
modulate = Color( 1, 1, 1, 0.2 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true

[node name="HandSlot" parent="Inventory/VBoxContainer/TopArea/ArmorSlots" instance=ExtResource( 2 )]
margin_top = 36.0
margin_bottom = 68.0
confine_categories = PoolStringArray( "equip_hands" )
slot_group = "equip"
next_groups = PoolStringArray( "main" )

[node name="TextureRect2" type="TextureRect" parent="Inventory/VBoxContainer/TopArea/ArmorSlots/HandSlot"]
self_modulate = Color( 1, 1, 1, 0.2 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 4 )
expand = true

[node name="BodySlot" parent="Inventory/VBoxContainer/TopArea/ArmorSlots" instance=ExtResource( 2 )]
margin_top = 72.0
margin_bottom = 104.0
confine_categories = PoolStringArray( "equip_body" )
slot_group = "equip"
next_groups = PoolStringArray( "main" )

[node name="TextureRect3" type="TextureRect" parent="Inventory/VBoxContainer/TopArea/ArmorSlots/BodySlot"]
self_modulate = Color( 1, 1, 1, 0.2 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="FootSlot" parent="Inventory/VBoxContainer/TopArea/ArmorSlots" instance=ExtResource( 2 )]
margin_top = 108.0
margin_bottom = 140.0
confine_categories = PoolStringArray( "equip_feet" )
slot_group = "equip"
next_groups = PoolStringArray( "main" )

[node name="TextureRect5" type="TextureRect" parent="Inventory/VBoxContainer/TopArea/ArmorSlots/FootSlot"]
self_modulate = Color( 1, 1, 1, 0.2 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )
expand = true

[node name="ColorRect" type="ColorRect" parent="Inventory/VBoxContainer/TopArea"]
margin_left = 36.0
margin_right = 132.0
margin_bottom = 140.0
rect_min_size = Vector2( 96, 0 )
color = Color( 0, 0, 0, 1 )

[node name="CraftingArea" type="VBoxContainer" parent="Inventory/VBoxContainer/TopArea"]
margin_left = 136.0
margin_right = 320.0
margin_bottom = 140.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/VBoxContainer/TopArea/CraftingArea"]
margin_right = 184.0
margin_bottom = 104.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer"]
margin_left = 44.0
margin_right = 184.0
margin_bottom = 104.0
size_flags_horizontal = 10

[node name="Label" type="Label" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Crafting"

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 140.0
margin_bottom = 90.0

[node name="CraftingArea" type="GridContainer" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 68.0
margin_bottom = 68.0
size_flags_vertical = 6
columns = 2

[node name="DragSlot" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea" instance=ExtResource( 2 )]
slot_group = "crafting"
next_groups = PoolStringArray( "main", "toolbar" )

[node name="DragSlot2" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 68.0
slot_group = "crafting"
next_groups = PoolStringArray( "main", "toolbar" )

[node name="DragSlot3" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea" instance=ExtResource( 2 )]
margin_top = 36.0
margin_bottom = 68.0
slot_group = "crafting"
next_groups = PoolStringArray( "main", "toolbar" )

[node name="DragSlot4" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea" instance=ExtResource( 2 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
slot_group = "crafting"
next_groups = PoolStringArray( "main", "toolbar" )

[node name="TextureRect" type="TextureRect" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_top = 18.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 6
texture = ExtResource( 8 )
expand = true

[node name="DragSlot" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 108.0
margin_top = 18.0
margin_right = 140.0
margin_bottom = 50.0
size_flags_vertical = 4
confine_categories = PoolStringArray( "craft_out" )
slot_group = "craft_out"
next_groups = PoolStringArray( "main", "toolbar" )

[node name="HBoxContainer2" type="HBoxContainer" parent="Inventory/VBoxContainer/TopArea/CraftingArea"]
margin_top = 108.0
margin_right = 184.0
margin_bottom = 140.0

[node name="DragSlot" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer2" instance=ExtResource( 2 )]
size_flags_horizontal = 2
confine_categories = PoolStringArray( "equip_shield" )
slot_group = "equip"
next_groups = PoolStringArray( "main" )

[node name="TextureRect4" type="TextureRect" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer2/DragSlot"]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 9 )
expand = true

[node name="Panel" type="Panel" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer2"]
margin_left = 94.0
margin_right = 126.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 2.0
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="Inventory/VBoxContainer"]
margin_top = 144.0
margin_right = 320.0
margin_bottom = 148.0
custom_styles/separator = SubResource( 3 )

[node name="MainInventory" type="GridContainer" parent="Inventory/VBoxContainer"]
margin_top = 152.0
margin_right = 320.0
margin_bottom = 256.0
columns = 9

[node name="DragSlot" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot2" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot3" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot4" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 108.0
margin_right = 140.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot5" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 144.0
margin_right = 176.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot6" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 180.0
margin_right = 212.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot7" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 216.0
margin_right = 248.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot8" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 252.0
margin_right = 284.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot9" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 288.0
margin_right = 320.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot18" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_top = 36.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot17" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot16" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot15" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot14" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 36.0
margin_right = 176.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot13" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 180.0
margin_top = 36.0
margin_right = 212.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot12" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 216.0
margin_top = 36.0
margin_right = 248.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot11" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 252.0
margin_top = 36.0
margin_right = 284.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot10" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 288.0
margin_top = 36.0
margin_right = 320.0
margin_bottom = 68.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot27" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_top = 72.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot26" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot25" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot24" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot23" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 144.0
margin_top = 72.0
margin_right = 176.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot22" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 180.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot21" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 216.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot20" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 252.0
margin_top = 72.0
margin_right = 284.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="DragSlot19" parent="Inventory/VBoxContainer/MainInventory" instance=ExtResource( 2 )]
margin_left = 288.0
margin_top = 72.0
margin_right = 320.0
margin_bottom = 104.0
slot_group = "main"
next_groups = PoolStringArray( "equip", "toolbar" )

[node name="HSeparator" type="HSeparator" parent="Inventory/VBoxContainer"]
margin_top = 260.0
margin_right = 320.0
margin_bottom = 264.0
custom_styles/separator = SubResource( 4 )

[node name="Toolbar" type="HBoxContainer" parent="Inventory/VBoxContainer"]
margin_top = 268.0
margin_right = 320.0
margin_bottom = 300.0
size_flags_vertical = 10

[node name="DragSlot" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot2" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 36.0
margin_right = 68.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot3" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 104.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot4" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 108.0
margin_right = 140.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot5" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 144.0
margin_right = 176.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot6" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 180.0
margin_right = 212.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot7" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 216.0
margin_right = 248.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot8" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 252.0
margin_right = 284.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="DragSlot9" parent="Inventory/VBoxContainer/Toolbar" instance=ExtResource( 2 )]
margin_left = 288.0
margin_right = 320.0
slot_group = "toolbar"
next_groups = PoolStringArray( "equip", "main" )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 0.25
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_bottom = -16.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 560.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Inventory Demo

This demo aims to replicate the inventory from the game Minecraft.

"
autowrap = true

[node name="Log" type="ScrollContainer" parent="."]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/bg = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Log"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Log/VBoxContainer"]
margin_right = 208.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Log"
align = 1

[node name="HSeparator" type="HSeparator" parent="Log/VBoxContainer"]
margin_top = 18.0
margin_right = 208.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Log/VBoxContainer"]
margin_top = 26.0
margin_right = 208.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/ArmorSlots/HeadSlot" to="." method="add_log" binds= [ "helmet equipped" ]]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/ArmorSlots/HeadSlot" to="." method="add_log" binds= [ "helmet unequpped" ]]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/ArmorSlots/HandSlot" to="." method="add_log" binds= [ "gloves equipped" ]]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/ArmorSlots/HandSlot" to="." method="add_log" binds= [ "gloves unequipped" ]]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/ArmorSlots/BodySlot" to="." method="add_log" binds= [ "armor equipped" ]]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/ArmorSlots/BodySlot" to="." method="add_log" binds= [ "armor unequipped" ]]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/ArmorSlots/FootSlot" to="." method="add_log" binds= [ "boots equipped" ]]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/ArmorSlots/FootSlot" to="." method="add_log" binds= [ "boots unequipped" ]]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot" to="." method="craft_area_changed"]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot" to="." method="craft_area_changed"]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot2" to="." method="craft_area_changed"]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot2" to="." method="craft_area_changed"]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot3" to="." method="craft_area_changed"]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot3" to="." method="craft_area_changed"]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot4" to="." method="craft_area_changed"]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer/VBoxContainer/HBoxContainer/CraftingArea/DragSlot4" to="." method="craft_area_changed"]
[connection signal="item_added" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer2/DragSlot" to="." method="add_log" binds= [ "shield equipped" ]]
[connection signal="item_removed" from="Inventory/VBoxContainer/TopArea/CraftingArea/HBoxContainer2/DragSlot" to="." method="add_log" binds= [ "shield unequipped" ]]
